--- a/www/rps/index.html
+++ b/www/rps/index.html
@@ -5,6 +5,10 @@
 		<title>RPS</title>
 		<script src="./js/jquery/jquery.min.js"></script>
 		<script src="./js/rps/index.js"></script>
+		<link rel="stylesheet" href="./css/proggy-square.css">
+<style>body,html{
+	background:#222222;
+}</style>
 	</head>
 	<body>
 	</body>
